# BulletinBoard

./: .env_template  .flake8  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
ads/: models.py  paginators.py  services.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ads_author.py  0003_alter_ads_price_alter_ads_title.py  0004_alter_ads_title.py  0005_alter_feedback_ad_alter_feedback_author.py  0006_alter_feedback_ad.py  0007_remove_ads_title.py  0008_ads_title.py
config/: settings.py  urls.py
htmlcov/: index.html
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/commands/: csu.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py
